added bubble sort descending to hr-manager